errors.txt
    Checking vibingide v0.1.0 (C:\Users\abhay\repos\VibingIde)
warning: unused import: `sysinfo::System`
  --> src\app.rs:10:5
   |
10 | use sysinfo::System;
   |     ^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0790]: cannot call associated function on trait without specifying the corresponding `impl` type
    --> src\app.rs:1552:38
     |
1552 | ...   let g_rect = Default::default(); // we can't easily draw custom rect without taking space, let's just color it
     |                    ^^^^^^^^^^^^^^^^^^ cannot call associated function of trait
     |
help: use a fully-qualified path to a specific available implementation
     |
1552 |                         let g_rect = </* self type */ as Default>::default(); // we can't easily draw custom rect without taking space, let's just color it
     |                                      +++++++++++++++++++        +

For more information about this error, try `rustc --explain E0790`.
warning: `vibingide` (bin "vibingide") generated 1 warning
error: could not compile `vibingide` (bin "vibingide") due to 1 previous error; 1 warning emitted
